# dbx_plugins

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/scripts/: detect_changed_plugins.py  get_package_version.py  package_archive.py  publish_releases.py
.github/workflows/: plugin-dist.yml  plugin-test.yml
common/logging/: Cargo.toml  README.md
common/logging/src/: lib.rs
common/plugin_api/: Cargo.toml  README.md  build.rs
common/plugin_api/protos/: event_record.proto
common/plugin_api/schemas/: api.capnp  plugin.capnp
common/plugin_api/src/: lib.rs
common/snowflake/: Cargo.toml
docs/: DESIGN_GRAPHQL_PLUGIN.md  DESIGN_GRPC_PLUGIN.md  DESIGN_REST_PLUGIN.md
plugins/example/: Cargo.toml  README.md
plugins/example/src/: main.rs
plugins/graph/: Cargo.toml  README.md  build.rs
plugins/graph/src/: config.rs  main.rs  model.rs  proto_capnp.rs
plugins/graph/src/net/: client.rs  proto.capnp  server.rs
plugins/graph/src/storage/: mod.rs  storage.rs
plugins/graphql/: Cargo.toml  README.md
plugins/graphql/src/: lib.rs  main.rs
plugins/graphql/tests/: graphql_regression.rs
plugins/grpc/: Cargo.toml  README.md  build.rs
plugins/grpc/proto/: api.proto
plugins/grpc/src/: lib.rs  main.rs
plugins/grpc/tests/: grpc_regression.rs
plugins/postgres/: Cargo.toml  README.md
plugins/queue/: Cargo.toml
plugins/rest/: Cargo.toml  README.md
plugins/rest/src/: lib.rs  main.rs
plugins/rest/tests/: rest_regression.rs
plugins/search/: Cargo.toml  README.md
plugins/search/src/: config.rs  indexer.rs  main.rs
