[workspace]
members = [
    "common/plugin_api",
    "common/logging",
    "plugins/*",
]
resolver = "2"

[package]
name = "dbx_plugins"
version = "0.1.0"
edition = "2021"
publish = false
description = "EventDBX plugin workspace that hosts shared crates and downstream agents."
license = "MIT"
readme = "README.md"
repository = "https://github.com/thachp/dbx_plugins"
keywords = ["eventdbx", "plugins"]

[dependencies]
dbx_plugin_api = { path = "common/plugin_api" }

[workspace.metadata.dist]
# Configure cargo-dist for all standalone agent crates.
cargo-dist-version = "0.30.0"
ci = "github"
# Default targets for CI builds across supported platforms.
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell"]

[[workspace.metadata.dist.package]]
package = "dbx_example"

[[workspace.metadata.dist.package]]
package = "dbx_graphql"

[[workspace.metadata.dist.package]]
package = "dbx_grpc"

[[workspace.metadata.dist.package]]
package = "dbx_rest"

[[workspace.metadata.dist.package]]
package = "dbx_graph"

[[workspace.metadata.dist.package]]
package = "dbx_search"
