[package]
name = "dbx_example"
version = "0.1.10"
edition = "2021"
description = "CLI example that connects to EventDBX and prints decoded event records."
license = "MIT"
readme = "README.md"
repository = "https://github.com/eventdbx/dbx_plugins"
keywords = ["eventdbx", "example", "cli"]
categories = ["command-line-utilities"]

publish = false

[dependencies]
anyhow = "1"
capnp = "0.17"
dbx_plugin_api = { path = "../../common/plugin_api" }
serde_json = "1"
dirs = "5"
