[package]
name = "dbx_graph"
version = "0.1.2"
edition = "2021"
description = "EventDBX graph plugin that maintains relationships in RocksDB and exposes a Cap'n Proto socket."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1"
capnp = "0.17"
capnp-futures = "0.17"
dirs = "5"
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snowflake = "1"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
rocksdb = { version = "0.21", default-features = false, features = ["multi-threaded-cf", "zstd"] }
num_cpus = "1"

dbx_plugin_api = { path = "../../common/plugin_api" }
dbx_plugin_logging = { path = "../../common/logging" }

[build-dependencies]
capnpc = "0.17"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread"] }
