[package]
name = "postgres"
version = "0.1.0"
edition = "2021"
description = "Scaffold for an EventDBX agent that writes event records into Postgres tables."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eventdbx/dbx_plugins"
keywords = ["eventdbx", "postgres", "database"]
categories = ["database"]
publish = false

[dependencies]
