[package]
name = "dbx_rest"
version = "0.1.7"
edition = "2021"
description = "REST agent that publishes EventDBX resources over an Axum HTTP interface."
readme = "README.md"
repository = "https://github.com/thachp/dbx_plugins"
keywords = ["eventdbx", "rest", "http"]
categories = ["database"]
authors = ["Patrick Thach <thachp@gmail.com>"]
license = "MIT"

[[bin]]
name = "dbx_rest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
clap = { version = "4.5", features = ["derive"] }
dbx_plugin_api = { path = "../../common/plugin_api" }
dbx_plugin_logging = { path = "../../common/logging" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
base64 = "0.21"
eventdbx = { git = "https://github.com/thachp/eventdbx.git", rev = "82b296df941fa74fa132d052d3cc6336b0c9b7a0" }
fake = "3"
rand = { version = "0.8", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.10"
